# studio

./: README.md  merge.cjs  metadata.json  package-lock.json  package.json  server.ts
repo_content/: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  raport_o_fuzji_source.md
repo_content/.github/workflows/: ci.yml  deploy.yml
repo_content/Assistant/Termux_Gemini/: .env.example  CLONE_INSTRUCTIONS.md  INSTRUKTAZ_STARTOWY.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  agent_config.yaml  requirements.txt  setup_termux.sh
repo_content/Assistant/fusion/: README.md
repo_content/Assistant/termux-gemini-agent-kit/: AGENTS.md  CLONE_INSTRUCTIONS.md  README.md  install.sh  uninstall.sh
repo_content/Source/AI-AGGREGATOR-BOT/: README.md
repo_content/Source/AI-AGGREGATOR-UPDATED/: .env.example  .gitignore  README.md  ruff.toml  ruff_version.txt
repo_content/Source/gigagrok-bot/: .env.example  .gitignore  FIREBASE_DEPLOYMENT.md  GIGAGROK_MASTER_PLAN.md  PHASE_PROMPTS.md  README.md  backup.sh  config.py  deploy.sh  gigagrok.service  github_client.py  healthcheck.py  main.py  requirements.txt  setup_vm.sh
repo_content/Source/nexus-omega-core/: .env.example  .gitignore  README.md  (+2 more)
repo_content/backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh
repo_content/infra/: Dockerfile.backend  Dockerfile.worker
repo_content/mcp-servers/: README.md  requirements.txt
repo_content/nexus_agent/: .env.example  Dockerfile  README.md  __init__.py  __main__.py  agent.py  requirements.txt  setup.py
repo_content/nexus_cli/: README.md  __init__.py  __main__.py  cli.py  requirements.txt  router.py  setup.py
repo_content/nexus_shared/: __init__.py  setup.py  thinking.py
repo_content/scripts/: deploy.sh  setup-debian.sh  setup-termux.sh
repo_content/telegram_bot/: Dockerfile  bot.py  config.py  docker-compose.yml  main.py  requirements.txt
repo_content/tests/: test_smoke.py
(+185 files in other folders)
