[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-omega-core-monorepo"
version = "0.1.0"
description = "N.O.C monorepo for backend, bot, agent, MCP, and CLI components"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nexus Omega Core Team" }]
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "venv", "node_modules", "Source", "Assistant"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "UP017", "N999", "F403", "F405"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^Source/|^Assistant/|^scripts/|^mcp-servers/|^nexus_agent/|^nexus_cli/)"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
