[project]
name = "ai-aggregator-backend"
version = "0.1.0"
description = "FastAPI backend for AI Aggregator Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg",
  "alembic",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "httpx>=0.27",
  "redis[hiredis]>=5.0",
  "celery[redis]>=5.3",
  "google-cloud-discoveryengine",
  "aiofiles",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-mock",
  "respx",
  "ruff",
  "coverage",
  "aiosqlite>=0.20",
  "pytest-cov",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
